--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SENDGRID_API_KEY=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
 MAIL_SENDER=trd.ayoub2004@gmail.com
 MAIL_RECEIVER=trd.ayoub@outlook.com
+MONGODB_URI=mongodb+srv://ayoub:ayoub@cluster0.wuk9s.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
